--- a/client/src/styles/pages/Product.scss
+++ b/client/src/styles/pages/Product.scss
@@ -203,6 +203,7 @@
     margin-top: 34px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 
     .product-wrapper__info-title {
       font-weight: 600;
