--- a/client/src/styles/sections/featuredProducts/productItem.scss
+++ b/client/src/styles/sections/featuredProducts/productItem.scss
@@ -12,6 +12,8 @@
     background-color: rgb(242, 242, 242);
     transition: all 0.3s ease-in-out;
     cursor: pointer;
+    height: 100%;
+    object-fit: cover;
   }
 
   .productItem__title {
